--- a/src/aoc/2021-1.md
+++ b/src/aoc/2021-1.md
@@ -55,7 +55,7 @@ func slide(start []int) func(int) bool {
   }
 }
 
-func part1() {
+func part_one() {
   var result int
   start := time.Now()
   array := read_file("INPUT")
@@ -69,7 +69,7 @@ func part1() {
   fmt.Println("Part 1 [", end.Sub(start), "]:", result)
 }
 
-func part2() {
+func part_two() {
   var result int
   start := time.Now()
   array := read_file("INPUT")
@@ -85,8 +85,8 @@ func part2() {
 
 func main() {
   fmt.Println("Year 2021 day 1 - Sonar Sweep")
-  part1()
-  part2()
+  part_one()
+  part_two()
 }
 ```
 
