--- a/src/aoc/2021-2.md
+++ b/src/aoc/2021-2.md
@@ -78,7 +78,7 @@ func compute_aim(instructions []Instruction) int {
   return depth * forward
 }
 
-func part1() {
+func part_one() {
   var result int
   start := time.Now()
   instructions := read_file("INPUT")
@@ -87,7 +87,7 @@ func part1() {
   fmt.Println("Part 1 [", end.Sub(start), "]:", result)
 }
 
-func part2() {
+func part_two() {
   var result int
   start := time.Now()
   instructions := read_file("INPUT")
@@ -98,8 +98,8 @@ func part2() {
 
 func main() {
   fmt.Println("Year 2021 day 2 - Dive!")
-  part1()
-  part2()
+  part_one()
+  part_two()
 }
 ```
 
