--- a/src/aoc/2021-3.md
+++ b/src/aoc/2021-3.md
@@ -97,7 +97,7 @@ func co2(lines []string) int {
   return filter(lines, rule)
 }
 
-func part1() {
+func part_one() {
   var result int
   start := time.Now()
   lines := read_file("INPUT")
@@ -106,7 +106,7 @@ func part1() {
   fmt.Println("Part 1 [", end.Sub(start), "]:", result)
 }
 
-func part2() {
+func part_two() {
   var result int
   start := time.Now()
   result = oxygen(read_file("INPUT")) * co2(read_file("INPUT"))
@@ -116,8 +116,8 @@ func part2() {
 
 func main() {
   fmt.Println("Year 2021 day 3 - Binary Diagnostic")
-  part1()
-  part2()
+  part_one()
+  part_two()
 }
 ```
 
