--- a/src/aoc/2021-6.md
+++ b/src/aoc/2021-6.md
@@ -57,7 +57,7 @@ func simulate_life(lanternfish [9]int, days int) int {
   return sum
 }
 
-func part1() {
+func part_one() {
   var result int
   start := time.Now()
   lanternfish := read_file("INPUT")
@@ -66,7 +66,7 @@ func part1() {
   fmt.Println("Part 1 [", end.Sub(start), "]:", result)
 }
 
-func part2() {
+func part_two() {
   var result int
   start := time.Now()
   lanternfish := read_file("INPUT")
@@ -77,8 +77,8 @@ func part2() {
 
 func main() {
   fmt.Println("Year 2021 day 6 - Lanternfish")
-  part1()
-  part2()
+  part_one()
+  part_two()
 }
 ```
 
