--- a/src/aoc/2024-3.md
+++ b/src/aoc/2024-3.md
@@ -34,7 +34,7 @@ func read_file(file_path string) string {
   return string(content)
 }
 
-func part1() {
+func part_one() {
   var result int
   var content = read_file("INPUT")
   start := time.Now()
@@ -49,7 +49,7 @@ func part1() {
   fmt.Println("Part 1 [", end.Sub(start), "]:", result)
 }
 
-func part2() {
+func part_two() {
   var result int
   content := read_file("INPUT")
   start := time.Now()
@@ -76,8 +76,8 @@ func part2() {
 
 func main() {
   fmt.Println("Year 2024 day 3 - Mull It Over")
-  part1()
-  part2()
+  part_one()
+  part_two()
 }
 ```
 
