--- a/src/aoc/2024-6.md
+++ b/src/aoc/2024-6.md
@@ -104,7 +104,7 @@ func is_loop(m Map, pos, obstacle Position, c chan bool) {
   c <- hash_ok
 }
 
-func part1() {
+func part_one() {
   var result int
   start := time.Now()
   m, pos := read_file("INPUT")
@@ -120,7 +120,7 @@ func part1() {
   fmt.Println("Part 1 [", end.Sub(start), "]:", result)
 }
 
-func part2() {
+func part_two() {
   var result int
   start := time.Now()
   m, pos := read_file("INPUT")
@@ -149,8 +149,8 @@ func part2() {
 
 func main() {
   fmt.Println("Year 2024 day 6 - Guard Gallivant")
-  part1()
-  part2()
+  part_one()
+  part_two()
 }
 ```
 
