--- a/src/aoc/2024-7.md
+++ b/src/aoc/2024-7.md
@@ -87,7 +87,7 @@ func common_solve(eq Equation, solver func(Equation, int, int) bool, c chan int)
   }
 }
 
-func part1() {
+func part_one() {
   var result int
   start := time.Now()
   equations := read_file("INPUT")
@@ -103,7 +103,7 @@ func part1() {
   fmt.Println("Part 1 [", end.Sub(start), "]:", result)
 }
 
-func part2() {
+func part_two() {
   var result int
   start := time.Now()
   equations := read_file("INPUT")
@@ -121,8 +121,8 @@ func part2() {
 
 func main() {
   fmt.Println("Year 2024 day 7 - Bridge Repair")
-  part1()
-  part2()
+  part_one()
+  part_two()
 }
 ```
 
