--- a/src/aoc/2024-9.md
+++ b/src/aoc/2024-9.md
@@ -153,7 +153,7 @@ func reallocate(format *[]Partition) {
   }
 }
 
-func part1() {
+func part_one() {
   var result int
   start := time.Now()
   disk := recreate_disk(read_file("INPUT"))
@@ -167,7 +167,7 @@ func part1() {
   fmt.Println("Part 1 [", end.Sub(start), "]:", result)
 }
 
-func part2() {
+func part_two() {
   var result int
   start := time.Now()
   format := create_my_format(read_file("INPUT"))
@@ -187,8 +187,8 @@ func part2() {
 
 func main() {
   fmt.Println("Year 2024 day 9 - Disk Fragmenter")
-  part1()
-  part2()
+  part_one()
+  part_two()
 }
 ```
 
