--- a/src/aoc/2021-7.md
+++ b/src/aoc/2021-7.md
@@ -59,7 +59,7 @@ func optimize_distance(numbers []int, op func(int, int) int) int {
   return result
 }
 
-func part1() {
+func part_one() {
   var result int
   start := time.Now()
   horizontal_positions := read_file("INPUT")
@@ -69,7 +69,7 @@ func part1() {
   fmt.Println("Part 1 [", end.Sub(start), "]:", result)
 }
 
-func part2() {
+func part_two() {
   var result int
   start := time.Now()
   horizontal_positions := read_file("INPUT")
@@ -84,8 +84,8 @@ func part2() {
 
 func main() {
   fmt.Println("Year 2021 day 7 - The Treachery of Whales")
-  part1()
-  part2()
+  part_one()
+  part_two()
 }
 ```
 
