--- a/src/aoc/2024-13.md
+++ b/src/aoc/2024-13.md
@@ -47,6 +47,17 @@ import (
   "time"
 )
 
+const (
+  Blue   = "\033[1;34m"
+  Yellow = "\033[1;33m"
+  Green  = "\033[1;32m"
+  Reset  = "\033[0m"
+)
+
+func print_result(dur time.Duration, part, result int) {
+  fmt.Println("Part " + fmt.Sprint(part) + " [" + Blue + fmt.Sprint(dur) + Reset + "]: " + Yellow + fmt.Sprint(result) + Reset)
+}
+
 type Machine struct {
   a     [2]int
   b     [2]int
@@ -112,7 +123,7 @@ func part_one() {
   start := time.Now()
   result = solve_all(read_file("INPUT"), 0)
   end := time.Now()
-  fmt.Println("Part 1 [", end.Sub(start), "]:", result)
+  print_result(end.Sub(start), 1, result)
 }
 
 func part_two() {
@@ -120,11 +131,11 @@ func part_two() {
   start := time.Now()
   result = solve_all(read_file("INPUT"), 10000000000000)
   end := time.Now()
-  fmt.Println("Part 2 [", end.Sub(start), "]:", result)
+  print_result(end.Sub(start), 2, result)
 }
 
 func main() {
-  fmt.Println("Year 2024 day 13 - Claw Contraption")
+  fmt.Println("Year " + Green + "2024" + Reset + " day " + Green + "13 - Claw Contraption" + Reset)
   part_one()
   part_two()
 }
