--- a/src/aoc/2024-2.md
+++ b/src/aoc/2024-2.md
@@ -28,6 +28,17 @@ import (
   "time"
 )
 
+const (
+  Blue   = "\033[1;34m"
+  Yellow = "\033[1;33m"
+  Green  = "\033[1;32m"
+  Reset  = "\033[0m"
+)
+
+func print_result(dur time.Duration, part, result int) {
+  fmt.Println("Part " + fmt.Sprint(part) + " [" + Blue + fmt.Sprint(dur) + Reset + "]: " + Yellow + fmt.Sprint(result) + Reset)
+}
+
 const LIMIT int = 3
 
 func read_file(file_path string) [][]int {
@@ -101,7 +112,7 @@ func part_one() {
     }
   }
   end := time.Now()
-  fmt.Println("Part 1 [", end.Sub(start), "]:", result)
+  print_result(end.Sub(start), 1, result)
 }
 
 func part_two() {
@@ -115,11 +126,11 @@ func part_two() {
     }
   }
   end := time.Now()
-  fmt.Println("Part 2 [", end.Sub(start), "]:", result)
+  print_result(end.Sub(start), 2, result)
 }
 
 func main() {
-  fmt.Println("Year 2024 day 2 - Red-Nosed Reports")
+  fmt.Println("Year " + Green + "2024" + Reset + " day " + Green + "2 - Red-Nosed Reports" + Reset)
   part_one()
   part_two()
 }
