--- a/src/aoc/2024-3.md
+++ b/src/aoc/2024-3.md
@@ -26,6 +26,17 @@ import (
   "time"
 )
 
+const (
+  Blue   = "\033[1;34m"
+  Yellow = "\033[1;33m"
+  Green  = "\033[1;32m"
+  Reset  = "\033[0m"
+)
+
+func print_result(dur time.Duration, part, result int) {
+  fmt.Println("Part " + fmt.Sprint(part) + " [" + Blue + fmt.Sprint(dur) + Reset + "]: " + Yellow + fmt.Sprint(result) + Reset)
+}
+
 func read_file(file_path string) string {
   content, err := os.ReadFile(file_path)
   if err != nil {
@@ -46,7 +57,7 @@ func part_one() {
     result += nr1 * nr2
   }
   end := time.Now()
-  fmt.Println("Part 1 [", end.Sub(start), "]:", result)
+  print_result(end.Sub(start), 1, result)
 }
 
 func part_two() {
@@ -71,11 +82,11 @@ func part_two() {
     }
   }
   end := time.Now()
-  fmt.Println("Part 2 [", end.Sub(start), "]:", result)
+  print_result(end.Sub(start), 2, result)
 }
 
 func main() {
-  fmt.Println("Year 2024 day 3 - Mull It Over")
+  fmt.Println("Year " + Green + "2024" + Reset + " day " + Green + "3 - Mull It Over" + Reset)
   part_one()
   part_two()
 }
