--- a/src/aoc/2024-7.md
+++ b/src/aoc/2024-7.md
@@ -26,6 +26,17 @@ import (
   "time"
 )
 
+const (
+  Blue   = "\033[1;34m"
+  Yellow = "\033[1;33m"
+  Green  = "\033[1;32m"
+  Reset  = "\033[0m"
+)
+
+func print_result(dur time.Duration, part, result int) {
+  fmt.Println("Part " + fmt.Sprint(part) + " [" + Blue + fmt.Sprint(dur) + Reset + "]: " + Yellow + fmt.Sprint(result) + Reset)
+}
+
 type Equation struct {
   result int
   operands []int
@@ -100,7 +111,7 @@ func part_one() {
   }
   close(c)
   end := time.Now()
-  fmt.Println("Part 1 [", end.Sub(start), "]:", result)
+  print_result(end.Sub(start), 1, result)
 }
 
 func part_two() {
@@ -116,11 +127,11 @@ func part_two() {
   }
   close(c)
   end := time.Now()
-  fmt.Println("Part 2 [", end.Sub(start), "]:", result)
+  print_result(end.Sub(start), 2, result)
 }
 
 func main() {
-  fmt.Println("Year 2024 day 7 - Bridge Repair")
+  fmt.Println("Year " + Green + "2024" + Reset + " day " + Green + "7 - Bridge Repair" + Reset)
   part_one()
   part_two()
 }
