--- a/src/aoc/2024.md
+++ b/src/aoc/2024.md
@@ -23,3 +23,4 @@ Beside solving each problem I will be focusing on the readability of the code.
 - [Day 11](2024-11.md)
 - [Day 12](2024-12.md)
 - [Day 13](2024-13.md)
+- [Day 14](2024-14.md)
