--- a/src/aoc/2021-7.md
+++ b/src/aoc/2021-7.md
@@ -29,6 +29,17 @@ import (
   "time"
 )
 
+const (
+  Blue   = "\033[1;34m"
+  Yellow = "\033[1;33m"
+  Green  = "\033[1;32m"
+  Reset  = "\033[0m"
+)
+
+func print_result(dur time.Duration, part, result int) {
+  fmt.Println("Part " + fmt.Sprint(part) + " [" + Blue + fmt.Sprint(dur) + Reset + "]: " + Yellow + fmt.Sprint(result) + Reset)
+}
+
 func read_file(file_path string) []int {
   content, err := os.ReadFile(file_path)
   if err != nil {
@@ -66,7 +77,7 @@ func part_one() {
   dist := func(x, y int) int { return int(math.Abs(float64(x - y))) }
   result = optimize_distance(horizontal_positions, dist)
   end := time.Now()
-  fmt.Println("Part 1 [", end.Sub(start), "]:", result)
+  print_result(end.Sub(start), 1, result)
 }
 
 func part_two() {
@@ -79,11 +90,11 @@ func part_two() {
   }
   result = optimize_distance(horizontal_positions, scaled_dist)
   end := time.Now()
-  fmt.Println("Part 2 [", end.Sub(start), "]:", result)
+  print_result(end.Sub(start), 2, result)
 }
 
 func main() {
-  fmt.Println("Year 2021 day 7 - The Treachery of Whales")
+  fmt.Println("Year " + Green + "2021" + Reset + " day " + Green + "7 - The Treachery of Whales" + Reset)
   part_one()
   part_two()
 }
