--- a/src/aoc/2024.md
+++ b/src/aoc/2024.md
@@ -25,3 +25,4 @@ Beside solving each problem I will be focusing on the readability of the code.
 - [Day 13](2024-13.md)
 - [Day 14](2024-14.md)
 - [Day 15](2024-15.md)
+- [Day 16](2024-16.md)
