--- a/src/aoc/2024.md
+++ b/src/aoc/2024.md
@@ -26,3 +26,4 @@ Beside solving each problem I will be focusing on the readability of the code.
 - [Day 14](2024-14.md)
 - [Day 15](2024-15.md)
 - [Day 16](2024-16.md)
+- [Day 17](2024-17.md)
