--- a/src/aoc/2024.md
+++ b/src/aoc/2024.md
@@ -27,3 +27,4 @@ Beside solving each problem I will be focusing on the readability of the code.
 - [Day 15](2024-15.md)
 - [Day 16](2024-16.md)
 - [Day 17](2024-17.md)
+- [Day 18](2024-18.md)
