--- a/src/aoc/2024.md
+++ b/src/aoc/2024.md
@@ -29,3 +29,4 @@ Beside solving each problem I will be focusing on the readability of the code.
 - [Day 17](2024-17.md)
 - [Day 18](2024-18.md)
 - [Day 19](2024-19.md)
+- [Day 20](2024-20.md)
