--- a/src/aoc/2024.md
+++ b/src/aoc/2024.md
@@ -30,3 +30,5 @@ Beside solving each problem I will be focusing on the readability of the code.
 - [Day 18](2024-18.md)
 - [Day 19](2024-19.md)
 - [Day 20](2024-20.md)
+- [Day 21](2024-21.md)
+- [Day 22](2024-22.md)
