--- a/src/aoc/2024.md
+++ b/src/aoc/2024.md
@@ -32,3 +32,4 @@ Beside solving each problem I will be focusing on the readability of the code.
 - [Day 20](2024-20.md)
 - [Day 21](2024-21.md)
 - [Day 22](2024-22.md)
+- [Day 23](2024-23.md)
