--- a/src/aoc/2024.md
+++ b/src/aoc/2024.md
@@ -34,3 +34,4 @@ Beside solving each problem I will be focusing on the readability of the code.
 - [Day 22](2024-22.md)
 - [Day 23](2024-23.md)
 - [Day 24](2024-24.md)
+- [Day 25](2024-25.md)
