--- a/src/aoc/2022.md
+++ b/src/aoc/2022.md
@@ -19,3 +19,5 @@ This contains tasks from the [year 2022](https://adventofcode.com/2022). Go back
 - [Day 13](2022-13.md)
 - [Day 14](2022-14.md)
 - [Day 15](2022-15.md)
+- [Day 16](2022-16.md)
+- [Day 17](2022-17.md)
