--- a/src/aoc/2015.md
+++ b/src/aoc/2015.md
@@ -11,3 +11,8 @@ This contains tasks from the [year 2015](https://adventofcode.com/2015). Go back
 - [Day 5](2015-5.md)
 - [Day 6](2015-6.md)
 - [Day 7](2015-7.md)
+- [Day 8](2015-8.md)
+- [Day 9](2015-9.md)
+- [Day 10](2015-10.md)
+- [Day 11](2015-11.md)
+- [Day 12](2015-12.md)
